# Personal_Finance_Manager

./: REFACTORING_NOTES.md
PersonalFinanceManager/: CMakeLists.txt  README.md
PersonalFinanceManager/auth/: PasswordHasher.cpp  PasswordHasher.h
PersonalFinanceManager/constant/: Schema.h
PersonalFinanceManager/db/: Database.cpp  Database.h
PersonalFinanceManager/docs/: DesignDocument.md
PersonalFinanceManager/docs/diagrams/: activity.mmd  class.mmd  er.mmd  flow.mmd  use_case.mmd
PersonalFinanceManager/inc/: Database.h  FinanceService.h  FinanceUI.h  PasswordHasher.h  SQLiteRepositories.h
PersonalFinanceManager/include/: Database.h  Models.h  Repository.h  Service.h  UI.h
PersonalFinanceManager/interface/: RepositoryInterfaces.h
PersonalFinanceManager/model/: Entities.h
PersonalFinanceManager/repo/: RepositoryInterfaces.h  SQLiteRepositories.cpp  SQLiteRepositories.h
PersonalFinanceManager/service/: FinanceService.cpp  FinanceService.h
PersonalFinanceManager/src/: Database.cpp  FinanceService.cpp  FinanceUI.cpp  PasswordHasher.cpp  Repository.cpp  SQLiteRepositories.cpp  Service.cpp  UI.cpp  main.cpp
PersonalFinanceManager/tests/: TestDatabaseSchema.cpp  TestFinanceManager.cpp  TestRepositoryInterfaces.cpp
PersonalFinanceManager/types/: Entities.h
PersonalFinanceManager/ui/: FinanceUI.cpp  FinanceUI.h
personal-finance-manager/: .gitignore  CMakeLists.txt  vcpkg.json
personal-finance-manager/finance-client/: CMakeLists.txt
personal-finance-manager/finance-client/include/api/: ApiClient.h  AuthSession.h
personal-finance-manager/finance-client/include/components/: ErrorBox.h  InputField.h  Navbar.h  Table.h
personal-finance-manager/finance-client/include/screens/: BudgetScreen.h  DashboardScreen.h  ExpenseScreen.h  IncomeScreen.h  LoginScreen.h  RegisterScreen.h  SummaryScreen.h
personal-finance-manager/finance-client/src/: main.cpp
personal-finance-manager/finance-client/src/api/: ApiClient.cpp  AuthSession.cpp
personal-finance-manager/finance-client/src/components/: ErrorBox.cpp  InputField.cpp  Navbar.cpp  Table.cpp
personal-finance-manager/finance-client/src/screens/: BudgetScreen.cpp  DashboardScreen.cpp  ExpenseScreen.cpp  IncomeScreen.cpp  LoginScreen.cpp  RegisterScreen.cpp  SummaryScreen.cpp
personal-finance-manager/finance-server/: CMakeLists.txt
personal-finance-manager/finance-server/config/: config.json
personal-finance-manager/finance-server/include/auth/: JwtManager.h  PasswordHasher.h
personal-finance-manager/finance-server/include/controllers/: AuthController.h  BudgetController.h  ExpenseController.h  IncomeController.h  SummaryController.h
personal-finance-manager/finance-server/include/database/: Database.h
personal-finance-manager/finance-server/include/middleware/: AuthMiddleware.h  InputValidator.h  RateLimiter.h
personal-finance-manager/finance-server/include/repositories/: BudgetRepository.h  ExpenseRepository.h  IncomeRepository.h  UserRepository.h
personal-finance-manager/finance-server/include/services/: AuthService.h  BudgetService.h  ExpenseService.h  IncomeService.h  SummaryService.h
personal-finance-manager/finance-server/include/utils/: ConfigLoader.h  Constants.h  DateUtils.h  Logger.h
personal-finance-manager/finance-server/src/: main.cpp
personal-finance-manager/finance-server/src/auth/: JwtManager.cpp  PasswordHasher.cpp
personal-finance-manager/finance-server/src/controllers/: AuthController.cpp  BudgetController.cpp  ExpenseController.cpp  IncomeController.cpp  SummaryController.cpp
personal-finance-manager/finance-server/src/database/: Database.cpp
personal-finance-manager/finance-server/src/middleware/: AuthMiddleware.cpp  InputValidator.cpp  RateLimiter.cpp
personal-finance-manager/finance-server/src/repositories/: BudgetRepository.cpp  ExpenseRepository.cpp  IncomeRepository.cpp  UserRepository.cpp
personal-finance-manager/finance-server/src/services/: AuthService.cpp  BudgetService.cpp  ExpenseService.cpp  IncomeService.cpp  SummaryService.cpp
personal-finance-manager/finance-server/src/utils/: ConfigLoader.cpp  DateUtils.cpp  Logger.cpp
personal-finance-manager/shared/models/: Budget.h  Expense.h  Income.h  User.h
personal-finance-manager/shared/utils/: JsonSerializer.h
personal-finance-manager/sql/: schema.sql
personal-finance-manager/src/: main.cpp
personal-finance-manager/tests/: CMakeLists.txt
personal-finance-manager/tests/server/: test_auth_service.cpp  test_date_utils.cpp
